[package]
name = "someday"
version = "0.0.2"
edition = "2021"
authors = ["hinto.janai <hinto.janai@protonmail.com>"]
description = "Eventually consistent, multi version concurrency"
documentation = "https://docs.rs/someday"
repository = "https://github.com/hinto-janai/someday"
readme = "README.md"
keywords = ["mvcc", "lock-free", "atomic", "multi-version", "concurrency"]
license = "MIT"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[features]
default = ["patch"]
patch = []

[dependencies]
arc-swap = { version = "1.6.0", default-features = false }

# Optional.
serde   = { version = "1", optional = true, features = ["derive"] }
bincode = { version = "2.0.0-rc.3", optional = true, features = ["derive"] }
paste   = "1.0.14"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "main"
harness = false
